# coast

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
include/gui_core/: ray_app.h
include/gui_vis/: fbgd.h  gradient.h  ngm_flat_vis.h  ngm_vis.h  vec_group_vis.h  vec_ring_buffer.h  vec_vis.h
include/hd_ngm2/: hd_ngm2.h  hd_ngm2_cfg.h  hd_ngm2_dendrite.h  hd_ngm2_neuron.h  hd_ngm2_neuron_group.h  hd_ngm2_tools.h
include/sim_core/: io_buffer.h  io_entity.h  sim_env.h
include/tools/: mnist_db.h  mnist_io.h
src/: main.cpp
src/gui_core/: ray_app.cpp
src/gui_vis/: fbgd.cpp  ngm_flat_vis.cpp  ngm_vis.cpp  vec_group_vis.cpp  vec_ring_buffer.cpp  vec_vis.cpp
src/hd_ngm2/: hd_ngm2_dendrite.cpp  hd_ngm2_neuron.cpp  hd_ngm2_neuron_group.cpp
src/sim_core/: io_buffer.cpp  sim_env.cpp
src/tools/: mnist_db.cpp  mnist_io.cpp
